manifests/labs/0-install/1-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    # ----------- Route to the Base Blogs REST Service -----------
    - matchers:
      - prefix: /blogs
      routeAction:
        single:
          upstream:
            name: default-blogs-80
            namespace: gloo-system
