manifests/labs/0-install/2-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    options:
      cors:
        allowCredentials: true
        allowHeaders:
        - content-type
        allowMethods:
        - POST
        allowOriginRegex:
        - '/*'
    routes:
    # ----------- Route to the Base Blogs REST Service -----------
    - matchers:
      - prefix: /blogs
      routeAction:
        single:
          upstream:
            name: default-blogs-80
            namespace: gloo-system
    # ----------- Route to the Gloo Edge Console -----------
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: gloo-system-gloo-fed-console-8090
            namespace: gloo-system
